--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   </p>
                 </td>
                 <td style="padding:2.5%;width:25%;max-width:25%">
-                  <a href="images/QianqianWang.jpg">
+                  <a href="images/XiangyongLu.jpg">
                     <img style="width:100%;max-width:100%" alt="profile photo" src="images/QianqianWang.jpg" class="hoverZoomLink">
                   </a>
                 </td>
