--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </td>
                 <td style="padding:2.5%;width:25%;max-width:25%">
                   <a href="images/XiangyongLu.jpg">
-                    <img style="width:100%;max-width:100%" alt="profile photo" src="images/QianqianWang.jpg" class="hoverZoomLink">
+                    <img style="width:100%;max-width:100%" alt="profile photo" src="images/XiangyongLu.jpg" class="hoverZoomLink">
                   </a>
                 </td>
               </tr>
