--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <tr style="padding:0px">
                 <td style="padding:2.5%;width:63%;vertical-align:middle">
                   <p style="text-align:center">
-                    <name>Qianqian Wang</name>
+                    <name>Xiangyong Lu</name>
                   </p>
                   I am a postdoctoral researcher at <a href="https://www.berkeley.edu/">UC Berkeley</a>, working with 
                   <a href="https://people.eecs.berkeley.edu/~kanazawa/">Prof. Angjoo Kanazawa</a> and 
@@ -102,7 +102,7 @@
                     My long-term research goal is to build intelligent systems that can perceive, understand and continually learn from the complex, ever-changing physical world.
                   </p>
                   <p>
-                    <strong>I am on the academic job market this year (2024-2025).</strong> 
+                    <strong>I am on the academic job market this year (2025).</strong> 
                   </p>
                   <p style="font-style: italic;">
                     (Qianqian is pronounced like "chyen-chyen")
