--- a/index.html
+++ b/index.html
@@ -89,14 +89,9 @@
                   <p style="text-align:center">
                     <name>Xiangyong Lu</name>
                   </p>
-                  I am a postdoctoral researcher at <a href="https://www.berkeley.edu/">UC Berkeley</a>, working with 
-                  <a href="https://people.eecs.berkeley.edu/~kanazawa/">Prof. Angjoo Kanazawa</a> and 
-                  <a href="https://people.eecs.berkeley.edu/~efros/">Prof. Alexei A. Efros</a>. I completed my PhD in Computer Science at 
-                  <a href="https://tech.cornell.edu/">Cornell Tech</a>, <a href="https://www.cornell.edu/">Cornell University</a> with 
-                  my advisors <a href="http://www.cs.cornell.edu/~snavely/">Prof. Noah Snavely</a> and 
-                  <a href="http://home.bharathh.info/">Prof. Bharath Hariharan</a>. Before that I received my bachelor's degree from 
-                  <a href="https://www.zju.edu.cn/english/">Zhejiang University</a>, working with 
-                  <a href="https://xzhou.me/">Prof. Xiaowei Zhou</a>.
+                  I am a Ph.D. candidate in the <a href="https://www.is.tohoku.ac.jp/en/">  Graduate School of Information Sciences</a> at <a href="https://www.tohoku.ac.jp/en/">Tohoku University</a>, supervised by  
+                  <a href="https://scholar.google.com/citations?user=gn780jcAAAAJ&hl=zh-CN">Prof. Takayuki Okatani</a>. Previously, I received my master's degree from <a href="http://english.cs.hust.edu.cn/">School of Computer Sicience and Technology</a>
+                  at <a href="http://english.hust.edu.cn/">Huazhong University of Sicience and Technology University</a>, supervised by <a href="https://scholar.google.com/citations?user=kIfNRN4AAAAJ&hl=zh-CN&oi=ao">Prof. Chen Yu</a> and <a href="https://scholar.google.com/citations?user=o02W0aEAAAAJ&hl=zh-CN&oi=ao">Prof. Hai Jin</a>.
                   <p>
                     My current research focuses on understanding and modeling the dynamic 3D world from everyday images and videos.
                     My long-term research goal is to build intelligent systems that can perceive, understand and continually learn from the complex, ever-changing physical world.
@@ -1369,7 +1364,7 @@
             </table>
           </div>
 
-          <table style="width:100%;border:0px;border-spacing:0px;margin-right:auto;margin-left:auto;">
+           <!--<table style="width:100%;border:0px;border-spacing:0px;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
                 <td style="padding:0px">
@@ -1381,7 +1376,7 @@
                 </td>
               </tr>
             </tbody>
-          </table>
+          </table> -->
 
         </td>
       </tr>
