--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                   <p style="text-align:center">
                     <name>Xiangyong Lu</name>
                   </p>
-                  I am a Ph.D. candidate in the <a href="https://www.is.tohoku.ac.jp/en/">  Graduate School of Information Sciences</a> at <a href="https://www.tohoku.ac.jp/en/">Tohoku University</a>, supervised by  
-                  <a href="https://scholar.google.com/citations?user=gn780jcAAAAJ&hl=zh-CN">Prof. Takayuki Okatani</a>. Previously, I received my master's degree from <a href="http://english.cs.hust.edu.cn/">School of Computer Sicience and Technology</a>
+                  I am a Ph.D. candidate in the Graduate School of Information Sciences at <a href="https://www.tohoku.ac.jp/en/">Tohoku University</a>, supervised by  
+                  <a href="https://scholar.google.com/citations?user=gn780jcAAAAJ&hl=zh-CN">Prof. Takayuki Okatani</a>. Previously, I received my master's degree from School of Computer Sicience and Technology
                   at <a href="http://english.hust.edu.cn/">Huazhong University of Sicience and Technology University</a>, supervised by <a href="https://scholar.google.com/citations?user=kIfNRN4AAAAJ&hl=zh-CN&oi=ao">Prof. Chen Yu</a> and <a href="https://scholar.google.com/citations?user=o02W0aEAAAAJ&hl=zh-CN&oi=ao">Prof. Hai Jin</a>.
                   <p>
                     My current research focuses on understanding and modeling the dynamic 3D world from everyday images and videos.
