--- a/index.html
+++ b/index.html
@@ -93,15 +93,11 @@
                   <a href="https://scholar.google.com/citations?user=gn780jcAAAAJ&hl=zh-CN">Prof. Takayuki Okatani</a>. Previously, I received my master's degree from School of Computer Sicience and Technology
                   at <a href="http://english.hust.edu.cn/">Huazhong University of Sicience and Technology University</a>, supervised by <a href="https://scholar.google.com/citations?user=kIfNRN4AAAAJ&hl=zh-CN&oi=ao">Prof. Chen Yu</a> and <a href="https://scholar.google.com/citations?user=o02W0aEAAAAJ&hl=zh-CN&oi=ao">Prof. Hai Jin</a>.
                   <p>
-                    My current research focuses on efficient neural network design for computer vision applications on resource-limited devices.
+                    My current research focuses on neural network architectural innovations and optimizations for computer vision applications on resource-limited devices.
                     My long-term research goal is to advance visual intelligence and AI systems for real-world applications on mobile devices, enabling high-performance, resource-efficient, and scalable on-device AI.
-                    
                   </p>
                   <p>
                     <strong>I am on the academic job market this year (2025).</strong> 
-                  </p>
-                  <p style="font-style: italic;">
-                    (Qianqian is pronounced like "chyen-chyen")
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp;
