--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                     <strong>I am on the academic job market this year (2025).</strong> 
                   </p>
                   <p style="text-align:center">
-                    <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp;
-                    <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp;
-                    <a href="https://scholar.google.com/citations?user=VdmfIeUAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
-                    <a href="https://twitter.com/QianqianWang5">Twitter</a> &nbsp;/&nbsp;
-                    <a href="https://github.com/qianqianwang68">Github</a>
+                    <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
+                    <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
+                    <a href="https://scholar.google.com/citations?user=VXq_k8QAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
+                    <a href="https://x.com/LuXiangyong">Twitter</a> &nbsp;/&nbsp;
+                    <a href="https://github.com/xyongLu">Github</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:25%;max-width:25%">
@@ -115,6 +115,32 @@
               </tr>
             </tbody>
           </table>
+          
+          <!-- Publications heading with two buttons -->
+          <div id="news" class="card-block dark">
+            <h3>News</h3>
+            <div>
+                <ul>
+                    <li>
+                        [Jan 23, 2025] Five papers accepted by ICLR. Congratulations to all paper authors!
+                    </li>
+                    <li>
+                        [Aug 12, 2024] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
+                    </li>
+                </ul>
+            </div>
+            <div class="collapse collapsed" style="color: #00029b">
+                <div>more</div>
+                <div class="indicator">+</div>
+            </div>
+            <div>
+                <ul>
+                    <li>
+                        None.
+                    </li>
+                </ul>
+            </div>
+          </div>
 
           <!-- Publications heading with two buttons -->
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
