--- a/index.html
+++ b/index.html
@@ -116,9 +116,19 @@
             </tbody>
           </table>
           
-          <!-- Publications heading with two buttons -->
+          <!-- News -->
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <heading>
+                    News 
+                  </heading>
+                </td>
+              </tr>
+            </tbody>
+          </table>
           <div id="news" class="card-block dark">
-            <h3>News</h3>
             <div>
                 <ul>
                     <li>
@@ -135,9 +145,12 @@
             </div>
             <div>
                 <ul>
-                    <li>
-                        None.
-                    </li>
+                  <li>
+                    [Feb 26, 2024] Four papers accepted by CVPR. Congratulations to all paper authors!
+                </li>
+                <li>
+                    [Jan 22, 2024] Five papers accepted by ICLR (3 spotlights). Congratulations to all paper authors!
+                </li>
                 </ul>
             </div>
           </div>
