--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   <p>
                     <strong>I am on the academic job market this year (2025).</strong> 
                   </p>
-                  <p style="text-align:center">
+                  <p style="text-align:left">
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
                     <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
                     <a href="https://scholar.google.com/citations?user=VXq_k8QAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
@@ -120,7 +120,7 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
-                <td style="padding:20px;width:100%;vertical-align:middle">
+                <td style="padding:16px;width:100%;vertical-align:middle">
                   <heading>
                     News 
                   </heading>
@@ -132,13 +132,14 @@
             <div>
                 <ul>
                     <li>
-                        [Jan 23, 2025] Five papers accepted by ICLR. Congratulations to all paper authors!
+                      [10/2023]  One paper '<strong>SBCFormer</strong>' was accepted to WACV'24.
                     </li>
-                    <li>
-                        [Aug 12, 2024] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
-                    </li>
+                    <!--<li>
+                        [10/2023] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
+                    </li>-->
                 </ul>
             </div>
+            <!--
             <div class="collapse collapsed" style="color: #00029b">
                 <div>more</div>
                 <div class="indicator">+</div>
@@ -153,18 +154,18 @@
                 </li>
                 </ul>
             </div>
-          </div>
+          </div>-->
 
           <!-- Publications heading with two buttons -->
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
-                <td style="padding:20px;width:100%;vertical-align:middle">
+                <td style="padding:16px;width:100%;vertical-align:middle">
                   <heading>
                     Publications 
                   </heading>
-                  &nbsp;(<a href="javascript:showPubs(0)" id="select0">show selected</a> / 
-                  <a href="javascript:showPubs(1)" id="select1">show all by date</a>)
+                  <!--&nbsp;(<a href="javascript:showPubs(0)" id="select0">show selected</a> / 
+                  <a href="javascript:showPubs(1)" id="select1">show all by date</a>)-->
                 </td>
               </tr>
             </tbody>
@@ -177,6 +178,7 @@
           <div id="pubs_selected" class="hidden">
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
               <tbody>
+                <!-- video
                 <tr onmouseout="cuter_stop()" onmouseover="cuter_start()">
                   <td style="padding:20px;width:25%;vertical-align:middle">
                     <div class="one">
@@ -218,7 +220,7 @@
                     <a href="https://github.com/CUT3R/CUT3R">code</a>
                     <p></p>
                   </td>
-                </tr>
+                </tr> 
 
                 <tr onmouseout="som_stop()" onmouseover="som_start()">
                   <td style="padding:20px;width:25%;vertical-align:middle">
@@ -262,89 +264,29 @@
                     <a href="https://github.com/vye16/shape-of-motion/">code</a>
                     <p></p>
                   </td>
-                </tr> 
-
-                <tr onmouseout="spatialtracker_stop()" onmouseover="spatialtracker_start()">
-                  <td style="padding:20px;width:25%;vertical-align:middle">
-                    <div class="one">
-                      <div class="two" id='spatialtracker_image'>
-                        <video  width="100%" height="100%" muted autoplay loop>
-                          <source src="images/spatial_tracker.mp4" type="video/mp4">
-                        </video>
-                      </div>
-                      <img src='images/spatial_tracker.jpg' id='spatialtracker_before' width="160" >
-                    </div>
-                    <script type="text/javascript">
-                      function spatialtracker_start() {
-                        document.getElementById('spatialtracker_image').style.opacity = "1";
-                      }
-                      function spatialtracker_stop() {
-                        document.getElementById('spatialtracker_image').style.opacity = "0";
-                      }
-                      spatialtracker_stop()
-                    </script>
-                  </td>
-
-                  <td style="padding:20px;width:75%;vertical-align:middle">
-                    <a href="https://henry123-boy.github.io/SpaTracker/">
-                      <papertitle> SpatialTracker: Tracking Any 2D Pixels in 3D Space </papertitle>
-                    </a>
-                    <br>
-                    <a href="https://henry123-boy.github.io/">Yuxi Xiao</a>*,
-                    <strong>Qianqian Wang</strong>*,
-                    <a href="https://zhanghe3z.github.io/">Shangzhan Zhang</a>,
-                    <a href="https://xuenan.net/">Nan Xue</a>,
-                    <a href="https://pengsida.net/">Sida Peng</a>,
-                    <a href="https://shenyujun.github.io/">Yujun Shen</a><sup>†</sup>,
-                    <a href="https://xzhou.me/">Xiaowei Zhou</a><sup>†</sup>
-                    <br>
-                    <em>CVPR</em>, 2024 (<strong>highlight</strong>)
-                    <br>
-                    <a href="https://henry123-boy.github.io/SpaTracker/">project page</a>
-                    /
-                    <a href="https://henry123-boy.github.io/SpaTracker/SpatialTracker_files/pdf/spatracker.pdf">arXiv</a>
-                    /
-                    <a href="https://github.com/henry123-boy/SpaTracker">code</a>
-                    <p></p>
-                  </td>
-                </tr>
+                </tr> -->
 
                 <tr onmouseout="dift_stop_all()" onmouseover="dift_start_all()">
                   <td style="padding:20px;width:25%;vertical-align:middle">
                     <div class="one">
                       <div class="two" id='dift_image_all'>
-                        <video  width="100%" height="100%" muted autoplay loop>
-                          <source src="images/dift.mp4" type="video/mp4">
-                        </video>
-                      </div>
-                      <img src='images/dift.png' id='dift_before' width="160">
+                      <img src='images/cmsa.png' id='dift_before' width="160">
                     </div>
-                    <script type="text/javascript">
-                      function dift_start_all() {
-                        document.getElementById('dift_image_all').style.opacity = "1";
-                      }
-                      function dift_stop_all() {
-                        document.getElementById('dift_image_all').style.opacity = "0";
-                      }
-                      dift_stop_all()
-                    </script>
                   </td>
                   <td style="padding:20px;width:75%;vertical-align:middle">
-                    <a href="https://diffusionfeatures.github.io/">
-                      <papertitle>Emergent Correspondence from Image Diffusion</papertitle>
+                    <a href="https://arxiv.org/abs/2412.02197">
+                    <papertitle>Cascaded Multi-Scale Attention for Enhanced Multi-Scale Feature Extraction and Interaction with Low-Resolution Images</papertitle>
                     </a>
                     <br>
-                    <a href="https://lumingtang.info/">Luming Tang*</a>,
-                    <a href="https://kmnp.github.io/">Menglin Jia*</a>,
-                    <strong>Qianqian Wang*</strong>,
-                    <a href="https://www.cs.cornell.edu/~cpphoo/">Cheng Perng Phoo</a>,
-                    <a href="http://home.bharathh.info/">Bharath Hariharan</a>
+                    <strong>Xiangyong Lu</strong>,
+                    Masanori Suganuma,
+                    Takayuki Okatani
                     <br>
-                    <em>NeurIPS</em>, 2023
+                    <em>arXiv</em>, 2024
                     <br>
-                    <a href="https://diffusionfeatures.github.io/">project page</a> /
-                    <a href="https://arxiv.org/abs/2306.03881/">arXiv</a> /
-                    <a href="https://github.com/Tsingularity/dift">code</a>
+                    <!--<a href="https://diffusionfeatures.github.io/">project page</a> / -->
+                    <a href="https://arxiv.org/abs/2412.02197">arXiv</a> /
+                    <a href="https://github.com/xyongLu/CMSA">code</a>
                     <p></p>
                   </td>
                 </tr>
