--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   <p>
                     <strong>I am on the academic job market this year (2025).</strong> 
                   </p>
-                  <p style="text-align:left">
+                  <p style="text-align:right">
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
                     <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
                     <a href="https://scholar.google.com/citations?user=VXq_k8QAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
