--- a/index.html
+++ b/index.html
@@ -99,18 +99,19 @@
                   <p>
                     <strong>I am on the academic job market this year (2025).</strong> 
                   </p>
-                  <p style="text-align:right">
-                    <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
-                    <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
-                    <a href="https://scholar.google.com/citations?user=VXq_k8QAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
-                    <a href="https://x.com/LuXiangyong">Twitter</a> &nbsp;/&nbsp;
-                    <a href="https://github.com/xyongLu">Github</a>
-                  </p>
+                  
                 </td>
                 <td style="padding:2.5%;width:25%;max-width:25%">
                   <a href="images/XiangyongLu.jpg">
                     <img style="width:100%;max-width:100%" alt="profile photo" src="images/XiangyongLu.jpg" class="hoverZoomLink">
                   </a>
+                  <p style="text-align:right">
+                    <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
+                    <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
+                    <a href="https://scholar.google.com/citations?user=VXq_k8QAAAAJ&hl=en">Google Scholar</a> /
+                    <a href="https://x.com/LuXiangyong">Twitter</a>
+                    <a href="https://github.com/xyongLu">Github</a>
+                  </p>
                 </td>
               </tr>
             </tbody>
@@ -267,7 +268,7 @@
                 </tr> -->
 
                 <tr>
-                  <td style="padding:16px;width:25%;vertical-align:middle">
+                  <td style="padding:20px;width:25%;vertical-align:middle">
                     <div class="one">
                       <img src='images/cmsa.png' id='dift_before' width="160">
                     </div>
@@ -291,7 +292,7 @@
                 </tr>
 
                 <tr>
-                  <td style="padding:16px;width:25%;vertical-align:middle">
+                  <td style="padding:20px;width:25%;vertical-align:middle">
                     <div class="one">
                       <img src='images/sbcformer.png' id='dift_before' width="160">
                     </div>
@@ -315,7 +316,7 @@
                 </tr>
 
                 <tr>
-                  <td style="padding:16px;width:25%;vertical-align:middle">
+                  <td style="padding:20px;width:25%;vertical-align:middle">
                     <div class="one">
                       <img src='images/boostKD.png' id='dift_before' width="160">
                     </div>
@@ -337,7 +338,7 @@
                 </tr>
 
                 <tr>
-                  <td style="padding:16px;width:25%;vertical-align:middle">
+                  <td style="padding:20px;width:25%;vertical-align:middle">
                     <div class="one">
                       <img src='images/clairvoyance.png' id='dift_before' width="160">
                     </div>
@@ -359,7 +360,7 @@
                 </tr>
 
                 <tr>
-                  <td style="padding:16px;width:25%;vertical-align:middle">
+                  <td style="padding:20px;width:25%;vertical-align:middle">
                     <div class="one">
                       <img src='images/3layerPNN.png' id='dift_before' width="160">
                     </div>
@@ -472,10 +473,10 @@
             <div>
                 <ul>
                     <li>
-                      [2021-2022] Advance Graduate School Pioneering Research Support Project for Doctoral Students, Japan Science and Technology Agency.
+                      [2021-22] Advance Graduate School Pioneering Research Support Project for Doctoral Students, Japan Science and Technology Agency.
                     </li>
                     <li>
-                      [2019-2022] Global Hagi Scholarship for Doctoral Students, Tohoku University.
+                      [2019-22] Global Hagi Scholarship for Doctoral Students, Tohoku University.
                     </li>
                     <li>
                       [2017] Outstanding Graduates (GPA 4.0/4.0), Huazhong University of Science and Technology.
