--- a/index.html
+++ b/index.html
@@ -105,18 +105,23 @@
                   <a href="images/XiangyongLu.jpg">
                     <img style="width:100%;max-width:100%" alt="profile photo" src="images/XiangyongLu.jpg" class="hoverZoomLink">
                   </a>
-                   <p style="text-align:right">
+                   <p style="text-align:center">
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
                     <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
-                    <a href="https://scholar.google.com/citations?user=VXq_k8QAAAAJ&hl=en">
-                      <img src="./images/scholar.png" height="30px" style="margin-bottom:-3px">
-                    </a> /
-                    <a href="https://x.com/LuXiangyong">
-                      <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px">
+                    <a href="mailto:qianqianwang@berkeley.edu" onclick="Email:xylu&64;vision.is.tohoku.ac.jp ">
+                      <img src="./images/email.png" height="30px" style="margin-bottom:-3px">
                     </a>
                     <a href="https://github.com/xyongLu">
                       <img src="./images/github.png" height="30px" style="margin-bottom:-3px">
                     </a>
+                    <a href="https://scholar.google.com/citations?user=VXq_k8QAAAAJ&hl=en">
+                      <img src="./images/scholar.png" height="30px" style="margin-bottom:-3px">
+                    </a> 
+                    <a href="https://x.com/LuXiangyong">
+                      <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px">
+                    </a>
+
+
                   </p>
 
                 </td>
@@ -140,6 +145,7 @@
             <div>
                 <ul>
                     <li>
+                      [12/2024]  One paper '<strong>CMSA</strong>' was submitted to arXiv.
                       [10/2023]  One paper '<strong>SBCFormer</strong>' was accepted to WACV'24.
                     </li>
                     <!--<li>
