--- a/index.html
+++ b/index.html
@@ -108,17 +108,17 @@
                    <p style="text-align:center">
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
                     <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
-                    <a href="mailto:qianqianwang@berkeley.edu" onclick="Email:xylu&64;vision.is.tohoku.ac.jp ">
-                      <img src="./images/email.png" height="30px" style="margin-bottom:-3px">
+                    <a href="#" onclick="Email:xylu&64;vision.is.tohoku.ac.jp ">
+                      <img src="./images/email.png" height="30px" style="margin-bottom:-3px" border=none;>
                     </a>
                     <a href="https://github.com/xyongLu">
-                      <img src="./images/github.png" height="30px" style="margin-bottom:-3px">
+                      <img src="./images/github.png" height="30px" style="margin-bottom:-3px" border=none;>
                     </a>
                     <a href="https://scholar.google.com/citations?user=VXq_k8QAAAAJ&hl=en">
-                      <img src="./images/scholar.png" height="30px" style="margin-bottom:-3px">
+                      <img src="./images/scholar.png" height="30px" style="margin-bottom:-3px" border=none;>
                     </a> 
                     <a href="https://x.com/LuXiangyong">
-                      <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px">
+                      <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px" border=none;>
                     </a>
 
 
