--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
                     <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
                     <a href="#" onclick="Email:xylu&64;vision.is.tohoku.ac.jp ">
-                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px" border=none>
+                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px">
                     </a>
                     <a href="https://github.com/xyongLu">
                       <img src="./images/github.png" height="30px" style="margin-bottom:-3px" border-style=solid border-width=10px border-color= #1772d0 >
                     </a>
                     <a href="https://scholar.google.com/citations?user=VXq_k8QAAAAJ&hl=en">
-                      <img src="./images/scholar.png" height="30px" style="margin-bottom:-3px" border=none>
+                      <img src="./images/scholar.png" height="30px" style="margin-bottom:-3px">
                     </a> 
                     <a href="https://x.com/LuXiangyong">
-                      <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px" border=none>
+                      <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px">
                     </a>
 
 
