--- a/index.html
+++ b/index.html
@@ -105,12 +105,10 @@
                   <a href="images/XiangyongLu.jpg">
                     <img style="width:100%;max-width:100%" alt="profile photo" src="images/XiangyongLu.jpg" class="hoverZoomLink">
                   </a>
-                   <p style="text-align:center">
+                   <p>
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
                     <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
-                    <a >
-                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px">
-                    </a>
+                    
                     <a href="https://github.com/xyongLu">
                       <img src="./images/github.png" height="30px" style="margin-bottom:-3px" border-style=solid border-width=10px border-color= #1772d0 >
                     </a>
@@ -120,8 +118,9 @@
                     <a href="https://x.com/LuXiangyong">
                       <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px">
                     </a>
-
-
+                    <a >
+                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px">
+                    </a>
                   </p>
 
                 </td>
@@ -144,10 +143,8 @@
           <div id="news" class="card-block dark">
             <div>
                 <ul>
-                    <li>
-                      [12/2024]  One paper '<strong>CMSA</strong>' was submitted to arXiv.
-                      [10/2023]  One paper '<strong>SBCFormer</strong>' was accepted to WACV'24.
-                    </li>
+                  <li> [12/2024]  One paper '<strong>CMSA</strong>' was submitted to arXiv. </li>
+                  <li> [10/2023]  One paper '<strong>SBCFormer</strong>' was accepted to WACV'24. </li>
                     <!--<li>
                         [10/2023] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
                     </li>-->
