--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
                     
                     <a href="https://github.com/xyongLu">
-                      <img src="./images/github.png" height="30px" style="margin-bottom:-3px" border-style=solid border-width=10px border-color= #1772d0 >
+                      <img src="./images/github.png" height="30px" style="margin-bottom:-3px" >
                     </a>
                     <a href="https://scholar.google.com/citations?user=VXq_k8QAAAAJ&hl=en">
                       <img src="./images/scholar.png" height="30px" style="margin-bottom:-3px">
