--- a/index.html
+++ b/index.html
@@ -119,9 +119,15 @@
                       <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px">
                     </a>
                     <a >
-                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px">
+                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px" alt="Grapefruit slice atop a pile of other slices">
                     </a>
                   </p>
+
+                  <script>
+                    function repeat() {
+                        $('#modal_volume').fadeIn();
+                    }
+                </script>
 
                 </td>
               </tr>
