--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div id="news" class="card-block dark">
             <div>
                 <ul>
-                  <li> [12/2024]  One paper '<strong>CMSA</strong>' was submitted to arXiv. </li>
+                  <li> [12/2024]  One paper '<strong>CMSA</strong>' was submitted to CVIU. </li>
                   <li> [10/2023]  One paper '<strong>SBCFormer</strong>' was accepted to WACV'24. </li>
                     <!--<li>
                         [10/2023] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
@@ -369,7 +369,7 @@
                     <em> IEEE Transactions on Intelligent Transportation Systems</em> (Review Results: Accept After Minor Revision), 2020
                     <br>
                     <!--<a href="https://diffusionfeatures.github.io/">project page</a> / -->
-                    <a href="https://arxiv.org/pdf/2112.04682">arXiv</a> /
+                    <a href="https://arxiv.org/pdf/2112.04682">arXiv</a> 
                     <!--<a href="https://github.com/JunjH/Boosting-Light-Weight-Depth-Estimation">code</a> -->
                     <p></p>
                   </td>
@@ -391,7 +391,7 @@
                     <em> IEEE Transactions on Sustainable Computing</em> , 2017
                     <br>
                     <!--<a href="https://diffusionfeatures.github.io/">project page</a> / -->
-                    <a href="https://ieeexplore.ieee.org/abstract/document/7984819">arXiv</a> /
+                    <a href="https://ieeexplore.ieee.org/abstract/document/7984819">arXiv</a> 
                     <!--<a href="https://github.com/JunjH/Boosting-Light-Weight-Depth-Estimation">code</a> -->
                     <p></p>
                   </td>
