--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                       <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px">
                     </a>
                     <a >
-                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px" onclick="getClick('电脑桌')" alt="Grapefruit slice atop a pile of other slices">
+                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px" onclick="getClick('xylu@vision.is.tohoku.ac.jp')" alt="Grapefruit slice atop a pile of other slices">
                     </a>
                   </p>
 
