--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <a href="images/XiangyongLu.jpg">
                     <img style="width:100%;max-width:100%" alt="profile photo" src="images/XiangyongLu.jpg" class="hoverZoomLink">
                   </a>
-                   <p>
+                   <p style="text-align:center">
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
                     <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
                     
