--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                   <a href="https://scholar.google.com/citations?user=gn780jcAAAAJ&hl=zh-CN">Prof. Takayuki Okatani</a>. Previously, I received my master's degree from School of Computer Sicience and Technology
                   at <a href="http://english.hust.edu.cn/">Huazhong University of Sicience and Technology University</a>, supervised by <a href="https://scholar.google.com/citations?user=kIfNRN4AAAAJ&hl=zh-CN&oi=ao">Prof. Chen Yu</a> and <a href="https://scholar.google.com/citations?user=o02W0aEAAAAJ&hl=zh-CN&oi=ao">Prof. Hai Jin</a>.
                   <p>
-                    My current research focuses on neural network architectural innovations and optimizations for computer vision applications on resource-limited devices.
-                    My long-term research goal is to advance visual intelligence and AI systems for real-world applications on mobile devices, enabling high-performance, resource-efficient, and scalable on-device AI.
+                    My current research focuses on <strong>neural network</strong> architectural innovations and optimizations for computer vision applications on resource-limited devices.
+                    My long-term research goal is to advance <strong>visual intelligence</strong> and <strong>AI systems</strong> for real-world applications on mobile devices, enabling high-performance, resource-efficient, and scalable <strong>on-device AI</strong>.
                   </p>
                   <p>
                     <strong>I am on the academic job market this year (2025).</strong> 
