--- a/index.html
+++ b/index.html
@@ -172,6 +172,31 @@
                 </ul>
             </div>
           </div>-->
+          
+          <!-- News -->
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:16px;width:100%;vertical-align:middle">
+                  <heading>
+                    Experience 
+                  </heading>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <div id="experience" class="card-block dark">
+            <div>
+                <ul>
+                  <li> [10/2024-03/2025]  <strong>[Academic]</strong> Part-time Research Staff, <strong> RIKEN Center</strong> for Advanced Intelligence Project. </li>
+                  <li> [04/2020-10/2024]  <strong>[Academic]</strong> Research Assistant, Graduate School of Information Sciences, Tohoku University. </li>
+                  <li> [03/2020-03/2022]  <strong>[Academic]</strong> Research Assistant, Graduate School of Information Sciences, Tohoku University. </li>
+                  <li> [12/2018-03/2019]  <strong>[Academic]</strong> Research Assistant, Department of Computer Science, City University of Hong Kong. </li>
+                    <!--<li>
+                        [10/2023] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
+                    </li>-->
+                </ul>
+            </div>
 
           <!-- Publications heading with two buttons -->
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
