--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
           <div id="news" class="card-block dark">
             <div>
                 <ul>
-                  <li> [12/2024]  One paper '<strong>CMSA</strong>' was submitted to CVIU. </li>
-                  <li> [10/2023]  One paper '<strong>SBCFormer</strong>' was accepted to WACV'24. </li>
+                  <li> <strong>[12/2024]</strong>  One paper '<strong>CMSA</strong>' was submitted to CVIU. </li>
+                  <li> <strong>[10/2023]</strong>  One paper '<strong>SBCFormer</strong>' was accepted to WACV'24. </li>
+                  <li> <strong>[08/2023]</strong>  One paper was accepted to KSEM'23. </li>
                     <!--<li>
                         [10/2023] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
                     </li>-->
@@ -188,10 +189,12 @@
           <div id="experience" class="card-block dark">
             <div>
                 <ul>
-                  <li> [10/2024-03/2025]  <strong>[Academic]</strong> Part-time Research Staff, <strong> RIKEN Center</strong> for Advanced Intelligence Project. </li>
-                  <li> [04/2020-10/2024]  <strong>[Academic]</strong> Research Assistant, Graduate School of Information Sciences, Tohoku University. </li>
-                  <li> [03/2020-03/2022]  <strong>[Academic]</strong> Research Assistant, Graduate School of Information Sciences, Tohoku University. </li>
-                  <li> [12/2018-03/2019]  <strong>[Academic]</strong> Research Assistant, Department of Computer Science, City University of Hong Kong. </li>
+                  <li> <strong>[10/2024-03/2025]</strong>  [Academic] Part-time Research Staff, <strong> RIKEN Center</strong> for Advanced Intelligence Project. </li>
+                  <li> <strong>[04/2020-10/2024]</strong>  [Academic] Research Assistant, Graduate School of Information Sciences, <strong>Tohoku University</strong>. </li>
+                  <li> <strong>[03/2020-03/2022]</strong>  [Project]  Main Member, <em>"Establishing Neural Architectural Design Methodology Accelerating Paradigm Shift Brought By Deep Learning"</em>, <strong>Ministry of Education, Science, Sports and Culture</strong>. </li>
+                  <li> <strong>[03/2020-03/2022]</strong>  [Project]  Member, <em>"Obstacle Detection for Vehicle"</em>, <strong>DENSO CORPORATION</strong>.</li>
+                  <li> <strong>[12/2018-03/2019]</strong>  [Academic] Research Assistant, Department of Computer Science, <strong>City University of Hong Kong</strong>. </li>
+                  <li> <strong>[02/2015-06/2017]</strong>  [Project]  Main memebr,  <em>"Intelligent Traffic Decision Support System"</em>, Zhuhai City.</li>
                     <!--<li>
                         [10/2023] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
                     </li>-->
