--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <div id="experience" class="card-block dark">
             <div>
                 <ul>
-                  <li> <strong>[10/2024-03/2025]</strong>  [Academic] Part-time Research Staff, <strong> RIKEN Center</strong> for Advanced Intelligence Project. </li>
+                  <li> <strong>[10/2024-03/2025]</strong>  [Academic] Part-time Research Staff, <strong> RIKEN Center for Advanced Intelligence Project</strong>.</li>
                   <li> <strong>[04/2020-10/2024]</strong>  [Academic] RA, Graduate School of Information Sciences, <strong>Tohoku University</strong>. </li>
                   <li> <strong>[03/2020-03/2022]</strong>  [Project]  Main Member, <em>"Establishing Neural Architectural Design Methodology Accelerating Paradigm Shift Brought By Deep Learning"</em>, <strong>Ministry of Education, Science, Sports and Culture</strong>. </li>
                   <li> <strong>[03/2020-03/2022]</strong>  [Project]  Member, <em>"Obstacle Detection for Vehicle"</em>, <strong>DENSO CORPORATION</strong>.</li>
